# circ-platform

./: .env.example  .gitignore  CIRC_Platform_MVP_Spec.md  README.md  main.py  makefile  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
config/: config.example.yaml  config.yaml
data/samples/: cloudtrail.jsonl  vpc_flow.csv
data/samples/expected/: expected_summary.json
rules/: CT-AUDIT-001_cloudtrail_logging_disabled.yaml  CT-AUTH-001_consolelogin_failure.yaml  CT-IAM-001_suspicious_assumerole.yaml  VPC-NET-001_exfil_over_nonstandard_port.yaml  rules.yml
scripts/: demo.ps1  verify_demo.py
src/circ_platform/: cli.py  config.py  correlate.py  detect.py  enrich.py  ingest.py  logging_utils.py  models.py  normalize.py  run_pipeline.py  storage.py  utils.py
tests/: test_correlate.py  test_detect_rules.py  test_normalize_cloudtrail.py  test_normalize_vpcflow.py
ui/: app.py  components.py  data.py  style.py
